[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Enemies/Gnom.png" type="Texture" id=1]
[ext_resource path="res://Assets/Shadow/ShadowSmall.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Collisions/PlayerDetection.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Collisions/HurtBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Enemies/Gnom.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Collisions/SoftCollision.gd" type="Script" id=6]
[ext_resource path="res://Assets/SFX/Attack02.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/SFX/Attack03.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/SFX/Death01.wav" type="AudioStream" id=9]

[sub_resource type="CylinderShape" id=1]
radius = 0.3
height = 1.0

[sub_resource type="Animation" id=2]
resource_name = "GnomDeath"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.25, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.1, 0 ), Vector3( 0, 0, 0 ), Vector3( 0, -0.5, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite3D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "GnomWalk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite3D:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Hide"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "UnHide"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CylinderShape" id=4]
radius = 0.45
height = 1.0

[sub_resource type="SphereShape" id=5]
radius = 12.0

[sub_resource type="CylinderShape" id=6]
radius = 0.5
height = 1.0

[node name="Gnom" type="KinematicBody" groups=["Enemy"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
collision_layer = 8
collision_mask = 521
script = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 1, 0, 0, 0 )
alpha_cut = 2
texture = ExtResource( 1 )
hframes = 4
frame = 1

[node name="SpriteAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "GnomWalk"
anims/GnomDeath = SubResource( 2 )
anims/GnomWalk = SubResource( 3 )

[node name="HideAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hide = SubResource( 7 )
anims/UnHide = SubResource( 8 )

[node name="SpriteShadow" type="Sprite3D" parent="."]
transform = Transform( 6, 0, 0, 0, -2.62268e-07, 1, 0, -6, -4.37114e-08, 0, -0.49, 0 )
texture = ExtResource( 2 )

[node name="HurtBox" parent="." groups=["Enemy"] instance=ExtResource( 4 )]
collision_layer = 64
collision_mask = 4

[node name="CollisionShape" parent="HurtBox" index="0"]
shape = SubResource( 4 )

[node name="PlayerDetection" parent="." instance=ExtResource( 3 )]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" parent="PlayerDetection" index="0"]
shape = SubResource( 5 )

[node name="SoftCollision" type="Area" parent="."]
collision_layer = 256
collision_mask = 256
script = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="SoftCollision"]
shape = SubResource( 6 )

[node name="SFXDeath" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 9 )
unit_db = 3.0

[node name="SFXHurt1" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 7 )
unit_db = 9.0

[node name="SFXHurt2" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 8 )
unit_db = 6.0

[connection signal="animation_finished" from="HideAnimationPlayer" to="." method="_on_HideAnimationPlayer_animation_finished"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="HurtBox"]
[editable path="PlayerDetection"]
